--- a/index.html
+++ b/index.html
@@ -23,16 +23,9 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+
+    <!-- external style sheet -->
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     Build The Community Your Fans Will Love Huddle re-imagines the way we build
