added container to mobile design

--- a/index.html
+++ b/index.html
@@ -28,32 +28,29 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="page-container">
+    <main class="page-container">
+      <img src="./images/logo.svg" alt="brand logo" class="logo" />
       <header>
-          <img src="./images/logo.svg" alt="brand logo" class="logo"/>
-          <img
-            class="hero"
-            src="./images/illustration-mockups.svg"
-            alt="Huddle mockup"
-          />
+        <img
+          class="hero"
+          src="./images/illustration-mockups.svg"
+          alt="Huddle mockup"
+        />
       </header>
-      <main class="container">
-  
-        <section class="content">
-          <h1 class="content__heading">
-            Build The Community Your Fans Will Love
-          </h1>
-          <p class="content__text">
-            Huddle re-imagines the way we build communities. You have a voice, but
-            so does your audience. Create connections with your users as you
-            engage in genuine discussion.
-          </p>
-          <a href="/" class="content__btn">
-            <span> Register </span>
-          </a>
-        </section>
-      </main>
-  
+      <section class="content">
+        <h1 class="content__heading">
+          Build The Community Your Fans Will Love
+        </h1>
+        <p class="content__text">
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
+          engage in genuine discussion.
+        </p>
+        <a href="/" class="content__btn">
+          <span> Register </span>
+        </a>
+      </section>
+
       <footer>
         <p class="attribution">
           Challenge by
@@ -87,7 +84,7 @@
           </li>
         </ul>
       </footer>
-    </div>
+    </main>
 
     <!-- icons -->
     <script
